# average

./: CMakeLists.txt  README.md  createData.c  matrixAverage.c
